--- a/docs/config.yaml
+++ b/docs/config.yaml
@@ -77,8 +77,15 @@ external-ui-url: "https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-
 # Utls is currently support TLS transport in TCP/grpc/WS/HTTP for VLESS/Vmess and trojan.
 global-client-fingerprint: chrome
 
-#  TCP keep alive interval
+# Retry interval of failed TCP keep-alive probe
 keep-alive-interval: 15
+
+# Idle time before TCP keep-alive probe
+# For backward-compatibility, this field will be set to keep-alive-interval if not set
+keep-alive-idle: 600
+
+# A dead connection will be closed after keep-alive-idle + N * keep-alive-interval seconds,
+# where N is a fixed number choosed by OS.
 
 # routing-mark:6666 # 配置 fwmark 仅用于 Linux
 experimental:
